Background image offset Y depends on image aspect ratio #48034

Closed
opened 2016-04-02 19:11:26 +02:00 by domlysz · 11 comments

Blender Version
2.76

Short description of error
It seems background image offset Y doesn't work as expected.

Exact steps for others to reproduce the error
Create a new rectangular image, for example 400x600 pixels
Add it to view 3d as background image
Set size to 4, so width will represents 4 units and height 6 units
Set Y offset to 2, the image will be shifted to 3 because aspect ratio is 1.5. To get a shift of 2 units we need to set Y offset to 1.3333

**Blender Version** 2.76 **Short description of error** It seems background image offset Y doesn't work as expected. **Exact steps for others to reproduce the error** Create a new rectangular image, for example 400x600 pixels Add it to view 3d as background image Set size to 4, so width will represents 4 units and height 6 units Set Y offset to 2, the image will be shifted to 3 because aspect ratio is 1.5. To get a shift of 2 units we need to set Y offset to 1.3333

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @domlysz

Added subscriber: @domlysz

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk

possible fix D1893?

possible fix [D1893](https://archive.blender.org/developer/D1893)?

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Current code works as intended, changing will break files, this is more of a TODO.

Current code works as intended, changing will break files, this is more of a TODO.

Not directly linked but I've also noticed that in Blender 2.74 and prior with a background image size set to 1 the image width represents 2 units but since v2.75 a size of 1 gives an image width of 1 units. I think it's better but can't find any information about this change and it also broke files or addons.

Not directly linked but I've also noticed that in Blender 2.74 and prior with a background image size set to 1 the image width represents 2 units but since v2.75 a size of 1 gives an image width of 1 units. I think it's better but can't find any information about this change and it also broke files or addons.

Will merge this in favor of the more recent #71256 (since the new task reflects the changes in background images...)

Will merge this in favor of the more recent #71256 (since the new task reflects the changes in background images...)

Closed as duplicate of #71256

Closed as duplicate of #71256

This issue was referenced by 4fec2b0660

This issue was referenced by 4fec2b0660452adaeb4e1a309901bb3650af9419

Changed status from 'Duplicate' to: 'Resolved'

Changed status from 'Duplicate' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48034
There is no content yet.