Fix T48034: Camera image offsets were scaled by image aspect

Offset now matches Blender 2.7x.